--- a/.github/workflows/build-larch.yml
+++ b/.github/workflows/build-larch.yml
@@ -1,8 +1,8 @@
-name: Build and run tests
+name: Build larch and run tests
 on:
   workflow_dispatch:
 jobs:
-  test:
+  build-larch:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
