--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,13 +1,19 @@
 
 {% set name = "larch" %}
 {% set version = environ.get('VERSION', '0.0.0') %}
+{% set git_rev = environ.get('GIT_COMMIT', 'main') %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  path: ../
+  # method 1: use local repo
+  # path: ../
+  # method 2: use online repo
+  git_url: git@github.com:matsengrp/larch.git
+  git_rev: {{ git_rev }}
+  git_submodules: true
 
 build:
   number: 0
