--- a/.github/workflows/build-larch.yml
+++ b/.github/workflows/build-larch.yml
@@ -1,7 +1,7 @@
 name: Build larch and run tests
 on:
   workflow_dispatch:
-    
+
 jobs:
   build-larch:
     runs-on: ubuntu-latest
@@ -14,33 +14,27 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install build-essential cmake zlib1g-dev python3-pip python3-pytest
-      - name: Install conda
-        run: |
-          curl -L https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh > Miniconda3-latest-Linux-x86_64.sh
-          bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
-          ~/miniconda/bin/conda update -n base -c defaults conda
+      - name: Set up Conda
+        uses: conda-incubator/setup-miniconda@v2
+        with:
+          auto-activate-base: false
       - name: Create conda env
         run: |
-          source ~/miniconda/etc/profile.d/conda.sh
           conda env create -f environment.yml
       - name: Build (cmake step)
         run: |
-          source ~/miniconda/etc/profile.d/conda.sh
-          conda activate larch-dev
-          mkdir build
+          conda activate larch-devmake 
           cd build
           export CMAKE_NUM_THREADS="8"
           cmake -DCMAKE_BUILD_TYPE=Debug ..
       - name: Build (make step)
         run: |
-          source ~/miniconda/etc/profile.d/conda.sh
           conda activate larch-dev
           cd build
           make -j20
           ln -s ../data
       - name: Run tests
         run: |
-          source ~/miniconda/etc/profile.d/conda.sh
           conda activate larch-dev
           cd build
           ./larch-test -tag slow
