--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -73,29 +73,29 @@ requirements:
     - ucx
     - zlib
 
-    - binutils
-    - binutils_impl_linux-64
-    - binutils_linux-64
-    - gdb
-    - libstdcxx-ng
-    - libgcc-ng
-    - libgomp
-    - libgfortran-ng
-    - libgfortran5
-    - libedit
-    - libffi
-    - expat
-    - libuuid
-    - libiconv
-    - libzlib
-    - perl
-    - gettext
-    - libasprintf
-    - libtool
-    - kernel-headers_linux-64
-    - rdma-core
-    - openssl
-    - keyutils
+    # - binutils
+    # - binutils_impl_linux-64
+    # - binutils_linux-64
+    # - gdb
+    # - libstdcxx-ng
+    # - libgcc-ng
+    # - libgomp
+    # - libgfortran-ng
+    # - libgfortran5
+    # - libedit
+    # - libffi
+    # - expat
+    # - libuuid
+    # - libiconv
+    # - libzlib
+    # - perl
+    # - gettext
+    # - libasprintf
+    # - libtool
+    # - kernel-headers_linux-64
+    # - rdma-core
+    # - openssl
+    # - keyutils
   
   host:
     - {{ compiler('c') }}
