--- a/tools/version.hpp.in
+++ b/tools/version.hpp.in
@@ -3,3 +3,4 @@
 #define VERSION_NUMBER "@VERSION_NUMBER@"
 #define GIT_COMMIT_HASH "@GIT_COMMIT_HASH@"
 #define GIT_COMMIT_DATE "@GIT_COMMIT_DATE@"
+#define BUILD_TYPE "@BUILD_TYPE@"
