--- a/.github/workflows/conda-publish.yml
+++ b/.github/workflows/conda-publish.yml
@@ -6,6 +6,8 @@ on:
 jobs:
   conda-publish:
     runs-on: ubuntu-latest
+    environment: conda-publish 
+
     steps:
       - name: Check out code
         uses: actions/checkout@v2
@@ -15,32 +17,25 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install build-essential zlib1g-dev python3-pip python3-pytest git git-lfs
-      - name: Set up Conda
-        uses: conda-incubator/setup-miniconda@v2
-        with:
-          auto-activate-base: false
-      - name: Install conda-build
+      - name: Install conda
         run: |
-          conda env update -f environment-dev.yml
-          conda activate larch-dev
-      - name: Build conda package
+          curl -L https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh > Miniconda3-latest-Linux-x86_64.sh
+          bash Miniconda3-latest-Linux-x86_64.sh -b -p ~/miniconda
+          ~/miniconda/bin/conda update -n base -c defaults conda
+      - name: Create conda env
         run: |
+          source ~/miniconda/etc/profile.d/conda.sh
+          conda config --prepend channels conda-forge
+          conda config --prepend channels bioconda
+          conda config --show channels
+          conda env create -f environment-dev.yml
+      - name: Build conda package and upload to Anaconda Cloud
+        env:
+          ANACONDA_USER: ${{ vars.ANACONDA_USER }}
+          ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
+          ANACONDA_FLAGS: ${{ vars.ANACONDA_FLAGS }} 
+        run: |
+          source ~/miniconda/etc/profile.d/conda.sh
           conda activate larch-dev
           export VERSION=$(cat ./VERSION)
-          conda-build . --output-folder=./build-conda
-      - name: Test conda package
-        run: |
-          conda create -n larch-conda
-          conda activate larch-conda
-          conda install --use-local larch
-          mkdir build-test
-          cd build-test 
-          ln -s ../data
-          larch-test -tag slow
-      - name: Upload Conda package to Anaconda Cloud
-        env:
-          ANACONDA_TOKEN: ${{ secrets.ANACONDA_TOKEN }}
-        run: |
-          conda activate larch-dev
-          anaconda upload --all ./conda-bld/*
-
+          conda build . --user ${ANACONDA_USER} --token ${ANACONDA_TOKEN} ${ANACONDA_FLAGS}
