added maintainers to meta.yaml

--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,21 +1,26 @@
 {% set name = "larch-phylo" %}
 {% set version = environ.get('LARCH_VERSION', '0.0.0') %}
 {% set git_commit = environ.get('LARCH_COMMIT', 'main') %}
-{% set git_src = environ.get('LARCH_SRC', 'local') %}
+{% set src = environ.get('LARCH_SRC', 'local') %}
+{% set hash = environ.get('LARCH_HASH', 'unknown')}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  {% if git_src == 'local' %}
+  {% if src == 'local' %}
   # method 1: use local repo
   path: ../
-  {% else %}
+  {% elif src == 'remote' %}
   # method 2: use online repo
   git_url: https://github.com/matsengrp/larch.git
   git_rev: {{ git_commit }}
   git_submodules: true
+  {% elif src == 'release' %}
+  # method 3: use release tarball
+  url:
+  sha256:
   {% endif %}
 
 build:
@@ -81,19 +86,22 @@ test:
   commands:
     - larch-usher --version
 
-extra:
-  system:
-    apt:
-      - git
-      - git-lfs
-
 about:
   home: https://github.com/matsengrp/larch
   license: MIT License
   license_family: MIT
   license_file: LICENSE
-  summary: 'Tool for exploring tree space of DAG/tree through SPR moves'
+  summary: 'Phylogenetic tool for exploring tree space of mutation annotated DAG/trees through SPR moves'
   description: |
-    Tool for exploring tree space of DAG/tree through SPR moves
+    Phylogenetic tool for exploring tree space of mutation annotated DAG/trees through SPR moves.
   doc_url: https://github.com/matsengrp/larch/blob/main/README.md
   dev_url: https://github.com/matsengrp/larch
+
+extra:
+  recipe-maintainers:
+    - matsengrp
+    - matsen
+    - davidrich27
+    - marybarker
+    - ognian~
+    
