--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -2,7 +2,7 @@
 {% set version = environ.get('LARCH_VERSION', '0.0.0') %}
 {% set src = environ.get('LARCH_SRC', 'local') %}
 {% set git_commit = environ.get('LARCH_COMMIT', 'main') %}
-{% set hash = environ.get('LARCH_HASH', 'unknown')}
+{% set hash = environ.get('LARCH_HASH', 'unknown') %}
 
 package:
   name: {{ name }}
