--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -1,26 +1,31 @@
 {% set name = "larch-phylo" %}
 {% set version = environ.get('LARCH_VERSION', '0.0.0') %}
+{% set src = environ.get('LARCH_SRC', 'local') %}
 {% set git_commit = environ.get('LARCH_COMMIT', 'main') %}
-{% set git_src = environ.get('LARCH_SRC', 'local') %}
+{% set hash = environ.get('LARCH_HASH', 'unknown') %}
 
 package:
   name: {{ name }}
   version: {{ version }}
 
 source:
-  {% if git_src == 'local' %}
+  {% if src == 'local' %}
   # method 1: use local repo
   path: ../
-  {% else %}
+  {% elif src == 'remote' %}
   # method 2: use online repo
   git_url: https://github.com/matsengrp/larch.git
   git_rev: {{ git_commit }}
   git_submodules: true
+  {% elif src == 'release' %}
+  # method 3: use release tarball
+  url: https://github.com/matsengrp/{{ name }}/archive/v{{ version }}.tar.gz
+  sha256: {{ hash }}
   {% endif %}
 
 build:
   number: 0
-  skip: true # [win]
+  skip: true # [win or osx]
 
 requirements:
   build:
@@ -73,6 +78,7 @@ requirements:
     - zlib
   
   host:
+    - python
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
 
@@ -80,19 +86,22 @@ test:
   commands:
     - larch-usher --version
 
-extra:
-  system:
-    apt:
-      - git
-      - git-lfs
-
 about:
   home: https://github.com/matsengrp/larch
-  license: GNU General Public License
-  license_family: GPL
+  license: MIT License
+  license_family: MIT
   license_file: LICENSE
-  summary: 'Tool for exploring tree space of DAG/tree through SPR moves'
+  summary: 'Phylogenetic tool for exploring tree space of mutation annotated DAG/trees through SPR moves'
   description: |
-    Tool for exploring tree space of DAG/tree through SPR moves
+    Phylogenetic tool for exploring tree space of mutation annotated DAG/trees through SPR moves.
   doc_url: https://github.com/matsengrp/larch/blob/main/README.md
   dev_url: https://github.com/matsengrp/larch
+
+extra:
+  recipe-maintainers:
+    - matsengrp
+    - matsen
+    - davidrich27
+    - marybarker
+    - ognian~
+    
