--- a/conda-recipes/conda_build_config.yaml
+++ b/conda-recipes/conda_build_config.yaml
@@ -1,3 +1,20 @@
+# gcc_linux-64:
+#   - 12.*  
+# gxx_linux-64:
+#   - 12.*
+
+# c_compiler:
+#   - gcc 
+# cxx_compiler:
+#   - gxx 
+
+# openmpi:
+#   - 4.1.*
+# ucx:
+#   - 1.16.*
+# zlib:
+#   - 1.2.11
+
 channels:
   - conda-forge
   - bioconda
