--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -4,6 +4,7 @@
 {% set git_commit = environ.get('LARCH_COMMIT', 'main') %}
 {% set version = environ.get('LARCH_VERSION', '0.1.0') %}
 {% set hash = environ.get('LARCH_HASH', 'f09851e89217b688c9b012da0161cadbc88b5692a9c823b44b83c2c129a5762d') %}
+{% set include_tests = environ.get('INCLUDE_LARCH_TEST', 'false') %}
 
 package:
   name: {{ package_name }}
@@ -31,32 +32,35 @@ build:
 requirements:
   build:
     - python
+    - {{ stdlib('c') }}
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
 
     - cmake =3.19.6
     - make
-    - openmpi
-    - openmpi-mpicc
-    - openmpi-mpicxx
-    - boost-cpp =1.76
+    - openmpi-mpicc 
+    - openmpi-mpicxx 
     - automake
     - autoconf
     - libtool
     - yasm
-    - ucx
-    - zlib
+    
+    - openmpi 
+    - boost-cpp =1.76
+    - ucx >=1.16.0
+    - zlib >=1.2.11
 
   run:
-    - openmpi
+    - openmpi 
     - boost-cpp =1.76
-    - ucx
-    - zlib
+    - ucx >=1.16.0
+    - zlib >=1.2.11
 
 test:
   commands:
     - larch-usher --version
-    - ls -lsh
+    - larch-dagutil --version
+    - larch-dag2dot --version
 
 about:
   home: https://github.com/matsengrp/larch
