--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -4,7 +4,7 @@
 {% set git_commit = environ.get('LARCH_COMMIT', 'main') %}
 {% set version = environ.get('LARCH_VERSION', '0.1.0') %}
 {% set hash = environ.get('LARCH_HASH', 'f09851e89217b688c9b012da0161cadbc88b5692a9c823b44b83c2c129a5762d') %}
-{% set include_tests = environ.get('INCLUDE_LARCH_TEST', 'false') %}
+{% set include_tests = environ.get('LARCH_INCLUDE_TEST', 'false') %}
 
 package:
   name: {{ package_name }}
@@ -32,25 +32,25 @@ build:
 requirements:
   build:
     - python
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
-
+    - gcc >=12.4.0,<14.0.0
+    - gxx >=12.4.0,<14.0.0
     - cmake =3.19.6
     - make
-    - openmpi-mpicc 
-    - openmpi-mpicxx 
+    - openmpi-mpicc >=4.1.0,<5.0
+    - openmpi-mpicxx >=4.1.0,<5.0
     - automake
     - autoconf
     - libtool
     - yasm
+    - openssh
     
-    - openmpi 
+    - openmpi >=4.1.0,<5.0
     - boost-cpp =1.76
     - ucx >=1.16.0
-    - zlib >=1.2.11
+    - zlib >=1.2.*
 
   run:
-    - openmpi 
+    - openmpi >=4.1.0,<5.0
     - boost-cpp =1.76
     - ucx >=1.16.0
     - zlib >=1.2.11
