--- a/conda-recipes/meta.yaml
+++ b/conda-recipes/meta.yaml
@@ -36,6 +36,7 @@ requirements:
     - gxx >=12.4.0,<14.0.0
     - cmake =3.19.6
     - make
+    - openmpi >=4.1.0,<5.0
     - openmpi-mpicc >=4.1.0,<5.0
     - openmpi-mpicxx >=4.1.0,<5.0
     - automake
@@ -43,11 +44,12 @@ requirements:
     - libtool
     - yasm
     - openssh
-    
+    - protobuf
+
     - openmpi >=4.1.0,<5.0
     - boost-cpp =1.76
     - ucx >=1.16.0
-    - zlib >=1.2.*
+    - zlib >=1.2.11
 
   run:
     - openmpi >=4.1.0,<5.0
@@ -77,4 +79,3 @@ extra:
     - matsen
     - davidrich27
     - marybarker
-    
